Fix line segments alignment, especially when box drawing or braille pattern chars are used

--- a/src/less/partials/_terminal.less
+++ b/src/less/partials/_terminal.less
@@ -20,7 +20,12 @@ pre.ap-terminal {
 
   .ap-line {
     display: block;
-    width: 200%;
+    width: 100%;
+    position: relative;
+
+    span {
+      position: absolute;
+    }
 
     .ap-cursor-a {
       display: inline-block;
